--- a/GeneralStuff/GeneralStuff.vcxproj.filters
+++ b/GeneralStuff/GeneralStuff.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="BasicExceptions.h">
       <Filter>Header Files\BasicExcecptions</Filter>
     </ClInclude>
+    <ClInclude Include="TestFolder\TestHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
