--- a/GeneralStuff/GeneralStuff.vcxproj
+++ b/GeneralStuff/GeneralStuff.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{0085DD1B-E5E6-4C18-B981-A6C64805924C}</ProjectGuid>
     <RootNamespace>GeneralStuff</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -125,14 +125,17 @@
   <ItemGroup>
     <ClCompile Include="BasicExceptions.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TestClassInterdependency\Interdependency.cpp" />
     <ClCompile Include="TextFiles\TextFiles.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicExceptions.h" />
+    <ClInclude Include="TestClassInterdependency\Interdependency.h" />
     <ClInclude Include="TestFolder\TestHeader.h" />
     <ClInclude Include="TextFiles\TextFiles.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Population.txt" />
     <Text Include="Text.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
