--- a/GeneralStuff/GeneralStuff.vcxproj
+++ b/GeneralStuff/GeneralStuff.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -87,9 +87,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -124,13 +126,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicExceptions.cpp" />
+    <ClCompile Include="ComplexNumber\ComplexNumber.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ClassDefinitions\RingBuffer.cpp" />
     <ClCompile Include="TestClassInterdependency\Interdependency.cpp" />
     <ClCompile Include="TextFiles\TextFiles.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicExceptions.h" />
     <ClInclude Include="ClassDefinitions\ClassDefinitions.h" />
+    <ClInclude Include="ComplexNumber\ComplexNumber.h" />
+    <ClInclude Include="ClassDefinitions\RingBuffer.h" />
     <ClInclude Include="TestClassInterdependency\Interdependency.h" />
     <ClInclude Include="TestFolder\TestHeader.h" />
     <ClInclude Include="TextFiles\TextFiles.h" />
