--- a/GeneralStuff/GeneralStuff.vcxproj
+++ b/GeneralStuff/GeneralStuff.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{0085DD1B-E5E6-4C18-B981-A6C64805924C}</ProjectGuid>
     <RootNamespace>GeneralStuff</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -126,6 +126,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicExceptions.cpp" />
+    <ClCompile Include="Bind\BindExample.cpp" />
     <ClCompile Include="ComplexNumber\ComplexNumber.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ClassDefinitions\RingBuffer.cpp" />
@@ -134,6 +135,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicExceptions.h" />
+    <ClInclude Include="Bind\BindExample.h" />
+    <ClInclude Include="Bind\SmartPointerExamples.h" />
     <ClInclude Include="ClassDefinitions\ClassDefinitions.h" />
     <ClInclude Include="ComplexNumber\ComplexNumber.h" />
     <ClInclude Include="ClassDefinitions\RingBuffer.h" />
